web-infras/parser/tests/fixtures/esprima/ES6/lexical-declaration/invalid_const_forin/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,12)
1|for (const x = 0 in y){}
 |          ^
